# Tilda

./: .cproject  .gitignore  .project  .pydevproject  Experiment.py  HelloWorld.py  Isotope.py  LICENSE  Physics.py  Pointeraufruf.py  README.md  ReleaseChangeList.txt  Test.py  aufruf.py  first commit.txt  mymath.c  mymath.h  pyproject.toml  requirements.txt  setup.cfg
FitFunc/: FullSpec.py  Hyperfine.py  Straight.py  Voigt.py
Labview14/: HostTestSimpleCounter.vi  ScratchTest.vi  TiTaProj.lvlps  TiTaProj.lvproj  sequencerState.ctl  sequencerTopLevel.vi
Labview14/Controls/: MCSselectRigger.ctl  MCSstate.ctl  SPstate.ctl  measVoltState.ctl
Labview14/DAC/: AD5781.vi  AD5781Deinit.vi  AD5781Init.vi  AD5781SetGlobalVariables.vi  AD5781SetVolt.vi  AD5781StepLogic.vi  AD5781Write.vi  AD5781WriteRead.vi  FPGA SPI_FPGA Top Level.vi
Labview14/DAC Scratch/: AD5781HostTest.vi  CSHostTest.vi  MCSHostTest.vi  calcStuff.vi
Labview14/DMM Test/: AgilentAndNiDmm.vi  AgilentTriggered.vi  NIDMMcontTriggered.vi  kepcoScanStandAloneHostTest.vi
Labview14/General/: Delay32Bit.vi  Header.vi  Multiplexer.vi  U32BitSplit.vi  U8BitJoin.vi  risingEdge.vi  runCtrChgAfterTime.vi  selectTrigger.vi  waitForRisEdge.vi
Labview14/HeinzingerControl/: heinzingerControlMain.vi
Labview14/HostScratch/: TRScheckHeader.vi  counterOrVolt.vi  dataUnwrapperToplevel.vi  sortItIntoArray.vi
Labview14/KepcoScan/: kepcoScan.vi  kepcoScanStandAlone.vi
Labview14/MCS/: MCSGlobalVars.vi  MCSGlobalVarsWrite.vi  MCSMain.vi  MCSPmtReadout.vi  MCSTopLevel.vi
Labview14/MeasVolt/: MeasSingleVoltCont.vi  measVoltGlobVars.vi  measVoltGlobVarsWrite.vi  measVoltHzOffset.vi
Labview14/PPG/: FPGA_32BitPattern_data_type.ctl  FPGA_cmd_data_type.ctl  FPGA_mem_data_type.ctl  FPGA_target_command_handler.vi  FPGA_target_execute_function.vi  FPGA_target_find_stop_output.vi  FPGA_target_main.vi  FPGA_target_read_fifo.vi  FPGA_target_read_memory.vi  FPGA_target_reinitialise_memory_data.vi  FPGA_target_reset_memory.vi  FPGA_target_set_output.vi  FPGA_target_set_stop_output.vi  FPGA_target_split_bit_information.vi  FPGA_target_split_bit_information_2.vi  FPGA_target_state_type.ctl  FPGA_target_write_fifo.vi  FPGA_target_write_mem2.vi  FPGA_target_write_memory.vi  NI-FPGA-PPG.aliases  NI-FPGA-PPG.lvlps
Labview14/QueueHandler/: DACQH.vi  MCSQH.vi  queueHandlerGlobals.vi  simpleCounterQH.vi
Labview14/Scratch/: COFDioTest.vi  DAFDioTest.vi  PXIportForward80MHz.vi  PXIportForwardCOF.vi  PortForwardTest.vi  SubViTestCore.vi  SubViTestTopLevel.vi  selectTriggerTest.vi  waitForRisEdgeTest.vi
Labview14/Sequencer/: scanRegionLogic.vi  sequencerCWTopLevel.vi  sequencerCore.vi  sequencerCycleLoops.vi  sequencerGlobVars.vi  sequencerGlobVarsWrite.vi  sequencerHandshakes.vi  (+5 more)
Measured/: GeneralSpecData.py
PolliFit/: .gitignore  .project
SimpleCounter/: NiFpga_SPMain.h  wrapper.c
Tilda/: TildaStart.py  __init__.py
TildaHost/: .project  TildaStart.py
TildaTarget/: .cproject
source/: .gitignore  AliveTools.py  Analyzer.py  BatchFit.py  CenterPlot.py  ColAcolTools.py  Copy of Scratch.py  Crawler.py  DBExperiment.py  DBIsotope.py  Experiment.py  InteractiveFit.py  Isotope.py  KingFitter.py  MPLPlotter.py  MainIsoPlot.py  Moments.py  Physics.py  PyQtGraphPlotter.py  SPFitter.py  Scratch.py  Scratch2.py  SimpleKepcoRunner.py  SimpleRunner.py  StartGui.py  TildaTools.py  Tools.py  XmlOperations.py  calciumD1.sqlite  calciumD2.sqlite  exp.sqlite  iso.sqlite
test/: AnaDB.sqlite  TestIso.sqlite  Test_Isotope.py  Test_Physics.py  Test_Tools.py  iso.sqlite  testTLD.tld  testTLD.txt
(+1483 files in other folders)
