[metadata]
name = Tilda
version = 0.0.1
author = LaserSpHERe group
author_email = lasersphere_exp@ikp.tu-darmstadt.de
description = A python package for the LaserSpHERe experiment control and data analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://gitlab.ikp.physik.tu-darmstadt.de/Lasersphere/Tilda
project_urls =
    Bug Tracker = http://gitlab.ikp.physik.tu-darmstadt.de/Lasersphere/Tilda/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    cffi >= 1.14.6
    comtypes >= 1.1.10
    cryptography >= 3.4.7
    cycler >= 0.10.0
    h5py >= 3.3.0
    kiwisolver >= 1.3.1
    lxml >= 4.6.3
    matplotlib >= 3.4.3
    mysql-connector-python >= 8.0.32
    numpy >= 1.21.2
    Pillow >= 8.3.1
    protobuf >= 3.17.3
    pycparser >= 2.20
    pyparsing >= 2.4.7
    PyQt5 >= 5.15.4
    PyQt5-Qt5 >= 5.15.2
    PyQt5-sip >= 12.9.0
    pyqtgraph >= 0.12.2
    pyserial >= 3.5
    python-dateutil >= 2.8.2
    pytz >= 2021.1
    PyVISA >= 1.11.3
    PyVISA-py >= 0.5.2
    pywin32 >= 301
    PyYAML >= 5.4.1
    scipy >= 1.7.1
    six >= 1.16.0
    typing-extensions >= 3.10.0.0

[options.package_data]
* = *.dll

[options.packages.find]
where =
